--- a/admin/src/Components/ListProduct/ListProduct.css
+++ b/admin/src/Components/ListProduct/ListProduct.css
@@ -23,7 +23,9 @@
   font-weight: 500;
 }
 .listproduct-product-icon {
-  height: 80px;
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
 }
 .listproduct-remove-icon {
   cursor: pointer;
